# ComputationalPhysics

./: .editorconfig  CHANGELOG.md  CONTRIBUTING.md  Cluster Find.py  Eden Cluster.py  Epidemic Cluster.py  PHYS510 Final1 FukushimaExpLog.py  PHYS510 Final2 FFT.py  PHYS510 Final3 Electrostatics.py  PHYS613 A10 Exercise6.37vanDerPol.py  PHYS613 A10 Exercise6.40DuffingOscillator.py  PHYS613 A11 Exercise7.1 WaveEqn.py  PHYS613 A11 Exercise7.11 HeatEqnSquare.py  PHYS613 A11 Exercise7.12 Magnet.py  PHYS613 A11 Exercise7.4 WaveInt.py  PHYS613 A6 Exercise4.30 RandomWalk3D.py  PHYS613 A6 P1 RandomWalk2D.py  PHYS613 A6 P1 RandomWalk3D.py  PHYS613 Project1 P2 Minimize.py  PHYS613 Project2 GeneticAlgorithm.py  PHYS613 Project3 P1 SpanningRatio.py  PHYS613 Project4 PerturbedOscillator.py  README.md  Scipy Optimize Example.py  pyproject.toml  requirements.txt  test_syntax_and_imports.py
clusters/: README.md  dla_cluster_mod.py
examples/: MandelbrotSet.py  README.md  rotation_converter.py
phys510/: README.md  phys510_final1_fukushima_exp.py  phys510_final1_fukushima_exp_log.py  phys510_final2_fft.py
phys613/: README.md
phys613/assignments/: PHYS613 A1 RootFind.py  PHYS613 A10 Exercise6.10 FFT.py  PHYS613 A3 P1FiniteQuantumWell.py  PHYS613 A3 P3Fractal.py  PHYS613 A5 Exercises Pendulum.py  phys613_a10_exercise6_10_fft.py  phys613_a10_exercise6_11_fft.py  phys613_a10_exercise6_37_van_der_pol.py  phys613_a10_exercise6_40_duffing_oscillator.py  phys613_a11_exercise7_10_heat_eqn_octagon.py  phys613_a11_exercise7_8_heat_eqn_square.py  (+8 more)
tests/: README.md  test_syntax_and_imports.py
(+4 files in other folders)
